--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,37 @@
+@ONLINE{TIOBE,
+author = {TIOBE Software},
+title = {TIOBE Programming Community Index for April 2013},
+month = april,
+year = 2013,
+url = {http://www.tiobe.com/index.php/content/paperinfo/tpci/index.html}
+}
+
+@Book{PIERCE:2002,
+author = {Benjamin C. Pierce},
+title = {Types and Programming Languages},
+publisher = {MIT Press},
+year = {2002},
+isbn = {0-262-16209-1}
+}
+
+@ONLINE{JavaStack,
+author = {Oracle Corporation},
+title = {Stack (Java Platform SE 6)},
+url = {http://docs.oracle.com/javase/6/docs/api/java/util/Stack.html}
+}
+
+@ONLINE{fsPowerPack,
+author = {F\# Foundation},
+title = {F\# PowerPack (including fslex and fsyacc)},
+url = {https://github.com/fsharp/powerpack}
+}
+
+@ONLINE{llvm-fs,
+author = {Keith Sheppard},
+title = {llvm-fs: An F\# binding for LLVM},
+url = {https://github.com/fsharp/llvm-fs}
+}
+
 @ONLINE{LLVMLangRef,
 author = {LLVM Compiler Infrastructure Project},
 title = {LLVM Language Reference Manual},
